+ login + signup + basic template

--- a/src/views/includes/head.ejs
+++ b/src/views/includes/head.ejs
@@ -8,3 +8,5 @@
     integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
   <title>Document</title>
 </head>
+
+<body>
