--- a/src/views/includes/nav.ejs
+++ b/src/views/includes/nav.ejs
@@ -10,6 +10,18 @@
         <li class="nav-item">
           <a class="nav-link" href="#">Link</a>
         </li>
+        <% if (!user) {%>
+          <li class="nav-item">
+            <a class="nav-link" href="/auth/signup">Sign Up</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/auth/login">Login</a>
+          </li>
+          <%} else{ %>
+            <li class="nav-item">
+              <a class="nav-link" href="/auth/logout">Logout</a>
+            </li>
+            <% } %>
       </ul>
     </div>
   </div>
