--- a/src/views/auth/login.ejs
+++ b/src/views/auth/login.ejs
@@ -1,7 +1,7 @@
 <%- include('../includes/head'); %>
   <%- include('../includes/nav'); %>
     <div class="container">
-      <form method="POST">
+      <form method="POST" action="/auth/login">
         <input type="hidden" name="_csrf" value=<%=csrfToken%>>
         <div class="mt-5">
           <label for="exampleInputEmail1" class="form-label">Email address</label>
