(?) templates (+) Contact registration and update

--- a/src/views/auth/login.ejs
+++ b/src/views/auth/login.ejs
@@ -13,5 +13,8 @@
         </div>
         <button type="submit" class="btn btn-primary">Submit</button>
       </form>
+      <div class="mt-5">
+        <h2>Dont have an account? <a href="/auth/signup" class="text-info"> Sign Up</a> </h2>
+      </div>
     </div>
     <%- include('../includes/script'); %>
