--- a/src/views/auth/signup.ejs
+++ b/src/views/auth/signup.ejs
@@ -24,6 +24,9 @@
           </div>
           <button type="submit" class="btn btn-primary">Submit</button>
         </form>
+        <div class="mt-5">
+          <h2>Already have an account? <a href="/auth/login" class="text-info"> Login</a> </h2>
+        </div>
     </div>
     </div>
     <%- include('../includes/script'); %>
