--- a/src/views/contact.ejs
+++ b/src/views/contact.ejs
@@ -1,8 +1,8 @@
 <%- include('includes/head'); %>
   <%- include('includes/nav'); %>
     <div class="container">
-      <h1 class="text-center my-5">Agenda</h1>
-      <p class="text-center lead">Contatos:</p>
+      <h1 class="text-center my-5">Schedule</h1>
+      <p class="text-center lead">Contacts:</p>
 
       <%- include('includes/messages')%>
         <form method="POST" action="/contact/register">
