--- a/src/views/contact/update.ejs
+++ b/src/views/contact/update.ejs
@@ -5,19 +5,19 @@
       <p class="text-center lead">Contact:</p>
 
       <%- include('../includes/messages')%>
-        <form method="POST" action="/contact/register">
+        <form method="POST" action="/contact/update/<%= contact._id %>">
           <input type="hidden" name="_csrf" value=<%=csrfToken%>>
           <div class="mt-3">
             <label for="name" class="form-label">Name</label>
-            <input type="text" class="form-control" id="name" name="name">
+            <input type="text" value="<%= contact.name%>" class="form-control" id="name" name="name">
           </div>
           <div class="mt-3">
             <label for="email" class="form-label">Email</label>
-            <input type="email" class="form-control" id="email" name="email">
+            <input type="email" value="<%= contact.email%>" class="form-control" id="email" name="email">
           </div>
           <div class="mt-3">
             <label for="number" class="form-label">Number</label>
-            <input type="text" class="form-control" id="number" name="number">
+            <input type="text" value="<%= contact.number%>" class="form-control" id="number" name="number">
           </div>
           <button type="submit" class="btn btn-primary mt-4">Submit</button>
         </form>
