--- a/src/views/contact/update.ejs
+++ b/src/views/contact/update.ejs
@@ -1,7 +1,7 @@
 <%- include('../includes/head'); %>
   <%- include('../includes/nav'); %>
     <div class="container">
-      <h1 class="text-center my-5">Schedule</h1>
+      <h1 class="text-center my-5">Contact List</h1>
       <p class="text-center lead">Contact:</p>
 
       <%- include('../includes/messages')%>
